@@ -1,6 +1,13 @@
 2017-05-06  Tom de Vries  <tom@codesourcery.com>
 
 	PR testsuite/80557
+	* gcc.target/aarch64/spellcheck_1.c: Replace absolute line numbers.
+	* gcc.target/aarch64/spellcheck_2.c: Same.
+	* gcc.target/aarch64/spellcheck_3.c: Same.
+
+2017-05-06  Tom de Vries  <tom@codesourcery.com>
+
+	PR testsuite/80557
 	* g++.dg/debug/dwarf2/dwarf2-1.C: Replace absolute line numbers.
 	* g++.dg/debug/dwarf2/dwarf2-2.C: Same.
 	* g++.dg/debug/dwarf2/pr46123-2.C: Same.
